:fix: Logo + Animation + Text Alignment :bug:

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ body {
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
   font-size: 2rem;
+  margin-top: 5.5rem;
   padding-left: 4rem;
   line-height: 1.5;
   font-weight: bold;
@@ -201,11 +202,11 @@ body {
 
 @keyframes fill {
   0% {
-    transform: scale(1);
+    transform: scale(0);
   }
 
   100% {
-    transform: scale(5);
+    transform: scale(1);
   }
 }
 /* FOOTER */
